# weareera_hadeera_casestudy

./: .gitignore  README.md  app.py  assign_scores.py  insights.py  models.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: personality_types_knowledge_base.json  product_catalog.json
