[project]
name = "weareerav2"
version = "0.1.0"
description = ""
authors = [
    {name = "Ehab42",email = "ihabnoureldin9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"

